arm64: dts: Cepheus: Add a memory region to enable booting via KernelWrapper.
* Citation: https://github.com/Project-Aloha/DualBootKernelPatcher/blob/main/ShellCode/ShellCode.KernelWrapper.S

* With KernelWrapper, we no longer need to clear the dtbo to boot the
  mainline kernel.

Signed-off-by: XiaoYeZi <qaz6750@outlook.com>

--- a/arch/arm64/boot/dts/qcom/sm8150-xiaomi-cepheus.dts
+++ b/arch/arm64/boot/dts/qcom/sm8150-xiaomi-cepheus.dts
@@ -49,6 +49,16 @@
 		wifi0 = &wifi;
 	};
 
+	memory {
+		ddr_device_type = <0x08>;
+		device_type = "memory";
+		#address-cells = <2>;
+		#size-cells = <2>;
+		reg = 	<0x0 0x80000000 0x0 0x3cc00000>,
+				<0x1 0x40000000 0x0 0xc0000000>,
+				<0x0 0xc0000000 0x0 0x80000000>;
+	};
+
 	chosen {
 		#address-cells = <2>;
 		#size-cells = <2>;
