--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -543,6 +543,7 @@ CONFIG_ARM64_CONTPTE=y
 # Boot options
 #
 CONFIG_CMDLINE=""
+CONFIG_CMDLINE_FROM_BOOTLOADER=n
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
 # CONFIG_COMPRESSED_INSTALL is not set
