arm64: configs: XiaoMi: Avoid abl passing useless bootarg
Signed-off-by: XiaoYeZi <qaz6750@outlook.com>

--- a/arch/arm64/configs/ohos_cepheus_defconfig
+++ b/arch/arm64/configs/ohos_cepheus_defconfig
@@ -519,6 +519,7 @@ CONFIG_STACKPROTECTOR_PER_TASK=y
 # Boot options
 #
 CONFIG_CMDLINE=""
+CONFIG_CMDLINE_FROM_BOOTLOADER=n
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
 # CONFIG_DMI is not set
@@ -6600,7 +6601,7 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_HMDFS_FS=y
 CONFIG_HMDFS_FS_PERMISSION=y
 CONFIG_HMDFS_FS_ENCRYPTION=y
-# CONFIG_HMDFS_FS_DEBUG is not set
+CONFIG_HMDFS_FS_DEBUG=y
 CONFIG_SHARE_FS=y
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
