--- a/arch/arm64/configs/ohos_raphael_defconfig
+++ b/arch/arm64/configs/ohos_raphael_defconfig
@@ -519,6 +519,7 @@ CONFIG_STACKPROTECTOR_PER_TASK=y
 # Boot options
 #
 CONFIG_CMDLINE=""
+CONFIG_CMDLINE_FROM_BOOTLOADER=n
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
 # CONFIG_DMI is not set
