OpenHarmony: Adapt code signature features
Signed-off-by: cbl <caobaolong5@huawei.com>
Signed-off-by: XiaoYeZi <qaz6750@outlook.com>

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -128,6 +128,8 @@ config FILE_LOCKING
 
 source "fs/crypto/Kconfig"
 
+source "fs/code_sign/Kconfig"
+
 source "fs/verity/Kconfig"
 
 source "fs/notify/Kconfig"
