arm64: configs: Raphael: Enable Qualcomm PMIC-FG driver
Signed-off-by: XiaoYeZi <qaz6750@outlook.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -3380,7 +3380,7 @@ CONFIG_BATTERY_QCOM_BATTMGR=y
 # CONFIG_BATTERY_UG3105 is not set
 # CONFIG_CHARGER_QCOM_SMB2 is not set
 # CONFIG_FUEL_GAUGE_MM8013 is not set
-# CONFIG_BATTERY_QCOM_FG is not set
+CONFIG_BATTERY_QCOM_FG=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_DEBUG_CHIP is not set
 
